# TAED2_BytesWithoutBorders

./: .gitignore  Makefile  README.md  allfiles.txt  collect_data.py  download_data.py  dvc.yaml  evaluate_model.py  fashion-mnist_train.csv.dvc  pyproject.toml  python  requirements.txt  train_model.py
byteswithoutborders/: __init__.py  api.py  dataset.py  emissions.csv  features.py  mnist_prediction_model.ipynb  pyproject.toml
byteswithoutborders/byteswithoutborders/: plots.py
byteswithoutborders/modeling/: predict.py  test_model.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
great_expectations/gx/: ScriptExpectations.py  great_expectations.yml
great_expectations/gx/checkpoints/: my_checkpoint.yml
great_expectations/gx/expectations/: .ge_store_backend_id
great_expectations/gx/gx/: great_expectations.yml
great_expectations/gx/gx/checkpoints/: checkpoint  checkpoint1
great_expectations/gx/gx/expectations/: .ge_store_backend_id  Data Expectations.json  Data Expectations1.json  Data Expectations2.json  Data Expectations3.json  Data Expectations4.json  Data Expectations5.json  Data Expectations6.json
great_expectations/gx/gx/validation_definitions/: Validation definition  (+1 more)
models/: dvc.yaml  fashion-model.h5
myenv/: pyvenv.cfg
notebooks/: mnist_prediction_model.ipynb
reports/: emissions.csv  pylint_report.txt  pylint_report2.txt  pynblint_report.txt  report3.txt
reports/dataset cards/: README.md
reports/model card/: README.md
scripts/: collect_data.py  evaluate_model.py  train_model.py
tests/: test_api.py  test_model.py
