[project]
name = "byteswithoutborders"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "BytesWithoutBorders" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["byteswithoutborders"]
force_sort_within_sections = true

[tool.poetry]
name = "byteswithoutborders"
version = "0.1.0"
description = ""
authors = ["Lukas Larsson <lukaslar@chalmers.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
codecarbon = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
